--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ flake8-docstrings==1.7.0
 flake8-import-order==0.18.2
 flake8-quotes==3.4.0
 ruff==0.3.0
+mypy==1.9.0
+types-setuptools==69.2.0.20240317
