--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
 annotated-types==0.6.0
 anthropic==0.30.1
 asyncio==3.4.3
-google-genai==0.3.0
-google-generativeai==0.8.2
-groq==0.4.2
-huggingface-hub==0.26.3
-ollama==0.4.2
-openai==1.55.0
-pydantic==2.10.2
-pytest==8.2.2
+bandit==1.7.8
+colorama==0.4.6
 flake8==7.0.0
 flake8-docstrings==1.7.0
 flake8-import-order==0.18.2
 flake8-quotes==3.4.0
-ruff==0.3.0
+google-genai==0.3.0
+google-generativeai==0.8.2
+groq==0.4.2
+huggingface-hub==0.26.3
 mypy==1.9.0
-types-setuptools==69.2.0.20240317
+ollama==0.4.2
+openai==1.55.0
+pre-commit==4.0.1
+psutil==5.9.8
+pydantic==2.10.2
+pytest==8.2.2
+pytest-asyncio==0.23.6
+python-dotenv==1.0.1
+ruff==0.3.0
 safety==2.3.5
-bandit==1.7.8
+types-setuptools==69.2.0.20240317
