ci(docs): prepared CI for main repo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ theme:
   icon:
     repo: fontawesome/brands/github
 
-site_url: https://lLostincode.github.io/Legion/
+site_url: https://LLMP-io.github.io/Legion/
 repo_url: https://github.com/LLMP-io/Legion
 repo_name: LLMP-io/Legion
 
