--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,12 +83,12 @@ nav:
       - Provider Configuration: core-concepts/providers/provider-configuration.md
   - Examples & Tutorials:
     - Basic Examples: examples/basic-examples.md
-  - Contributing: contributing/index.md
-  - Development Guide:
-    - Architecture Overview: development-guide/architecture.md
-    - Project Structure: development-guide/project-structure.md
-    - Development Setup: development-guide/setup.md
-    - Troubleshooting: development-guide/troubleshooting.md
+  - Contributing: 
+    - Contribution Guide: contributing/index.md
+    - Project Structure: contributing/project-structure.md
+    - Architecture Overview: contributing/architecture.md
+    - Development Setup: contributing/setup-development.md
+    - Troubleshooting: contributing/troubleshooting.md
     - Documentation Guide: DOCUMENTATION_GUIDE.md
   - Release Notes:
     - Version History: release-notes/version-history.md
